--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -7,14 +7,10 @@
 
 %\documentclass[a4paper,10pt]{article}
 \usepackage[utf8]{inputenc}
-\usepackage{xeCJK}
-\setmainfont{Times}
-\setCJKmainfont[BoldFont=STHeiti,ItalicFont=STKaiti]{STSong}
-\setCJKsansfont[BoldFont=STHeiti]{STXihei}
-\setCJKmonofont{STFangsong}
+\usepackage{times}
 
 %opening
-\title{Repeatable Reverse Engineering with PANDA
+\title{Placeholder LAVA Title
   \thanks{This work is sponsored by the Assistant Secretary of Defense
     for Research \& Engineering under Air Force Contract
     \#FA8721-05-C-0002.  Opinions, interpretations, conclusions and
@@ -28,7 +24,7 @@
 \\
 \IEEEauthorblockA{\IEEEauthorrefmark{1}NYU\\brendandg@nyu.edu}
 \IEEEauthorblockA{\IEEEauthorrefmark{2}MIT Lincoln Laboratory\\
-\{josh.hodosh,patrick.hulin,tleek,rwhelan\}@ll.mit.edu}
+\{jpatrick.hulin,tleek,rwhelan\}@ll.mit.edu}
 }
 
 \begin{document}
@@ -37,91 +33,37 @@
 
 \begin{abstract}
 
-We present PANDA, an open-source tool that has been purpose-built to support whole
-system reverse engineering. It is built upon the
-QEMU whole system emulator, and so analyses have access to all code
-executing in the guest and all data.  PANDA adds the ability to record
-and replay executions, enabling iterative, deep, whole system
-analyses.  Further, the replay log files are compact and shareable,
-allowing for repeatable experiments.  A nine billion instruction
-boot of FreeBSD, e.g., is represented by only a few hundred
-MB.  PANDA leverages QEMU's support of thirteen different
-CPU architectures to make analyses of those diverse instruction sets possible
-within the LLVM IR.  In this way, PANDA can have a single dynamic
-taint analysis, for example, that precisely supports many CPUs.  PANDA
-analyses are written in a simple plugin architecture which includes a
-mechanism to share functionality between plugins, increasing analysis
-code re-use and simplifying complex analysis development.  We
-demonstrate PANDA's effectiveness via a number of use cases, including
-enabling an old but legitimately purchased game to run despite a
-lost CD key, in-depth diagnosis of an Internet Explorer crash, and
-uncovering the censorship activities and mechanisms of an IM
-client.
-
+We present LAVA, a system for automatically injecting large numbers of vulnerabilities into existing open-source programs.
 \end{abstract}
 
 \section{Motivation}
 \label{sec:motivation}
 \input{motivation}
 
-\section{PANDA System}
-\label{sec:pandasys}
+\section{Scope}
+\label{sec:scope}
+\input{scope}
 
-In this section, we describe the four main novel aspects of PANDA: its
-record/replay facility, its plugin architecture, its ability to
-use a single analysis for multiple architectures, and its ability to emulate
-Android systems.
+\section{LAVA Overview}
+\label{sec:overview}
+\input{overview}
 
-\input{recordreplay}
-\input{plugins}
-\input{architectureneutral}
-\input{android}
+\section{Implementation}
+\label{sec:implementation}
+\input{implementation}
 
-
-\section{Plugin Details}
-\label{sec:plugins}
-
-Here we detail a few specific plugins commonly used when reverse
-engineering with PANDA.
-
-\input{tzb}
-\input{syscalls}
-\input{shadowcallstack}
-\input{scissors}
-\input{taint}
-
-
-\section{Case Studies}
-\label{sec:usecases}
-
-In this section, we present three compelling RE use cases for PANDA.
-In the first, an old PC game for which the CD key has
-been lost is rapidly made whole again by locating the key verification
-code and harnessing it to produce keys on demand.  In the second, a
-Windows Internet Explorer vulnerability is diagnosed in depth from a
-whole-system replay, indicating not merely that it is a use-after-free
-bug but pointing the finger at a precise CVE number.  In the third, an
-IM client suspected of censoring messages is quickly
-determined to be doing so via a blacklist which is also readily
-extracted.  Note that, while we end up using many of the plugins
-mentioned in Section~\ref{sec:plugins}, no attempt was made to cover
-all of them with our use cases.  Rather, we allowed the task at hand
-to drive the plugins employed.
-
-
-\input{reversesomeoldtech}
-\input{reversesomevuln}
-\input{reversesomebadsoftware}
-\input{reproduce}
+\section{Results}
+\label{sec:results}
+\input{results}
 
 \section{Related Work}
 \label{sec:relwork}
-\input{relatedwork}
+\input{relwork}
 
 
 \section{Limitations and Future Work}
 \label{sec:future}
-\input{limitations}
+\input{future}
 
 \section{Conclusion}
 \input{conclusion}
