Refine motivation and scope.

--- a/paper1/motivation.tex
+++ b/paper1/motivation.tex
@@ -1,3 +1,5 @@
 
 
-Bug-finding tools have been an active area of research for as long as computer programs have existed. Techniques like abstract interpretation and fuzzing, along with newer approaches like concolic execution, claim to be able to find real, exploitable vulnerabilities in real programs.  But it has long been difficult to evaluate these techniques' comparative utility. Effectively, bug-finding tools have been trained on the only test data we have, which is existing bugs. Acquiring a large corpus of previously unreleased bugs is prohibitively expensive, as these bugs can sell for thousands of dollars on the open market. The only remaining option is to create synthetic bugs in programs.
+Bug-finding tools have been an active area of research for as long as computer programs have existed. Techniques like abstract interpretation and fuzzing, along with newer approaches like concolic execution, claim to be able to find exploitable vulnerabilities in real programs.  But it has long been difficult to evaluate these techniques' comparative utility. Effectively, bug-finding tools have been trained on the only test data we have, which is existing bugs. Acquiring a large corpus of previously unreleased bugs is prohibitively expensive, as exploitable bugs can sell for thousands of dollars on the open market, and no one has really been interested in collecting the non-exploitable ones.
+
+The only remaining option is to create synthetic bugs in programs.
