--- a/paper1/results.tex
+++ b/paper1/results.tex
@@ -1,17 +1,21 @@
 
 
-
-\begin{tabular}{lllll} 
-            &          $liv=[0,1)$ & $liv=[1,10)$   & $liv=[10,100)$  & $liv=[100,+\inf]$ \\ 
-$tcn=[0,1)$ &        n=539 y=0.523 & n=6516 y=0.469 & n=1004 y=0.219  & n=2309 y=0.221 \\
-$tcn=[1,10)$ &                     & n=833 y=0.125  &                 & \\
-$tcn=[10,100)$ &                   &                & n=74 y=0.000    & \\
-$tcn=[100,+\inf]$ &  & & &\\
+\begin{table}
+\centering
+\begin{tabular}{l|l|l|l|l} 
+ & \multicolumn{3}{c}{Liveness} &  \\  
+$TCN$ &         $[0,1)$ & $[1,10)$ & $[10,100)$ & $[100,+\inf]$ \\  \hline 
+$[0,1)$ &       0.523   & 0.469    & 0.219      & 0.221 \\
+$[1,10)$ &      --      & 0.125    & --         & --    \\
+$[10,100)$ &    --      & --       & 0.000      & --    \\
+$[100,+\inf]$ & --      & --       & --         & -- \\ 
 \end{tabular}
+\end{table}
+
 
 
 %+----------------+---------------+----------------+-----------------+-------------------+
-%|                | liv=[0..1)    | liv=[1..10)    | liv=[10..100)   | liv=[100..+inf]   |
+%|           liv= | [0..1)        | [1..10)        | [10..100)       | [100..+inf]   |
 %+================+===============+================+=================+===================+
 %| tcn=[0,1)      | n=539 y=0.523 | n=6516 y=0.469 | n=1004 y=0.219  | n=2309 y=0.221    |
 %+----------------+---------------+----------------+-----------------+-------------------+
