--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -34,15 +34,15 @@
 \begin{abstract}
 
 Work on automating vulnerability discovery has long been hampered by a shortage of ground-truth corpora with which to evaluate tools and techniques.
-To begin to address this, we present LAVA, a system for automatically and quickly injecting large numbers of realistic bugs into program source code.  
-LAVA employs a pair of taint-based measures to identify program quantities that both depend upon specific input bytes in a simple way yet do not overly influence control flow.
+To begin to address this, we present VITAL, a system for automatically and quickly injecting large numbers of realistic bugs into program source code.  
+VITAL employs a pair of taint-based measures to identify program quantities that both depend upon specific input bytes in a simple way yet do not overly influence control flow.
 These DUAs (dead-uncomplicated and available data) are employed, via source-to-source transformation, to perturb program quantities at later program points that are likely to cause vulnerabilities.
-Every LAVA vulnerability is accompanied by a fuzzed input that triggers it, whereas normal inputs are extremely unlikely to do so.
-Further, every LAVA bug is validated, and thus every working bug comes with both a proof-of-concept input and a known manifestation point.  
+Every VITAL vulnerability is accompanied by a fuzzed input that triggers it, whereas normal inputs are extremely unlikely to do so.
+Further, every VITAL bug is validated, and thus every working bug comes with both a proof-of-concept input and a known manifestation point.  
 These vulnerabilities are synthetic but, we argue, still realistic, in the sense that they are embedded deep with programs and are triggered by inputs.
 In order for an automated tool to discover them, it would have to be able to reason correctly and precisely about all the code executed up to the DUA.
-Using LAVA, we have injected tens of thousands of bugs into popular programs such as file, strings, readelf, tshark, and eog.
-We believe LAVA can form the basis of an approach for generating extremely high quality ground truth vulnerability corpora, on demand.
+Using VITAL, we have injected tens of thousands of bugs into popular programs such as file, strings, readelf, tshark, and eog.
+We believe VITAL can form the basis of an approach for generating extremely high quality ground truth vulnerability corpora, on demand.
 
 
 
@@ -56,7 +56,7 @@ We believe LAVA can form the basis of an approach for generating extremely high 
 \label{sec:scope}
 \input{scope}
 
-\section{LAVA Overview}
+\section{VITAL Overview}
 \label{sec:overview}
 \input{overview}
 
