--- a/paper1/scope.tex
+++ b/paper1/scope.tex
@@ -1,5 +1,5 @@
 
-We restrict our attention, with LAVA, to the injection of bugs into source code.
+We restrict our attention, with VITAL, to the injection of bugs into source code.
 This makes sense given our interest in using it to assemble large corpora for the purpose of evaluating and developing vulnerability discovery techniques and systems.
 Most automated vulnerability discovery systems work with source code [References?], and we can easily test binary analysis tools by simply compiling the source code with injected bugs.
 Injecting bugs into binaries or byte code may also be possible using a similar approach, but we do not consider it here.
