--- a/paper1/motivation.tex
+++ b/paper1/motivation.tex
@@ -14,7 +14,7 @@ Thus, one technique is judged superior if it finds more bugs than another.
 While this state of affairs is perfectly understandable, given the scarcity of ground truth, it is an obstacle to science and progress in vulnerability discovery.
 There is currently no way to measure fundamental figures of merit such as miss and false alarm rate for a bug finding tool.
 
-We propose the following requirements for bugs in a vulnerbility corpus, if it is to be useful for research, development, and evaluation.
+We propose the following requirements for bugs in a vulnerability corpus, if it is to be useful for research, development, and evaluation.
 Bugs must be
 \begin{enumerate}
 \item Cheap and plentiful
@@ -28,14 +28,14 @@ Corpora are more valuable if they are essentially disposable.
 The second and third of these requirements are versions of ``the bugs must be realistic''.
 The fourth means the bug is real and serious, and is a precondition for determining exploitability. 
 The fifth is crucial.
-Consider the converse: if a bug manifests for all or a large fraction of inputs it is trivially discoverable.
+Consider the converse: if a bug manifests for all or a large fraction of inputs it is trivially discoverable, and therefore it is unlikely to exist in programs that are used in the real world.
 
 The approach we propose is to create a synthetic vulnerability via a few judicious and automated edits to the source code of a real program.
 We will detail and give results for an implementation of this approach that satisfies all of the above requirements.
-We call this implementation LAVA for Lincoln Automated Vulnerability Application.
-A serious bug such as a buffer overflow can be injected by LAVA into a program of X LOC in about a minute, and for programs of this size LAVA can inject  Y thousand such bugs.
-LAVA bugs manifest all along the execution trace, in all parts of the program, shallow and deep, and make use of mostly completely normal data flow.
-By construction, a LAVA bug comes with an input that triggers it, and no other input can have this effect upon the program.
+We call this implementation VITAL for Lincoln Automated Vulnerability Application.
+A serious bug such as a buffer overflow can be injected by VITAL into a program of X LOC in about a minute, and for programs of this size VITAL can inject  Y thousand such bugs.
+VITAL bugs manifest all along the execution trace, in all parts of the program, shallow and deep, and make use of mostly completely normal data flow.
+By construction, a VITAL bug comes with an input that triggers it, and no other input can have this effect upon the program.
 
 This paper is organized as follows. 
 [Do we want to do this?]
