results mostly written for 3 of 5 programs

--- a/paper1/overview.tex
+++ b/paper1/overview.tex
@@ -30,7 +30,7 @@ a is bytes 0..3, b is 4..7, and c is 8..11.
 The value in b at the call to memcpy has tcn=0 and liveness=0,
 so it can be used to trigger and control a vulnerability there.
 }
-\label{worked-example}
+\label{fig:worked-example}
 \end{figure}
 
 
