--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -10,7 +10,7 @@
 \usepackage{times}
 
 %opening
-\title{AVID: Automatic vulnerability injection on demand
+\title{VITAL: Vulnerability Injection via Taint AnaLysis
   \thanks{This work is sponsored by the Assistant Secretary of Defense
     for Research \& Engineering under Air Force Contract
     \#FA8721-05-C-0002.  Opinions, interpretations, conclusions and
