--- a/paper1/motivation.tex
+++ b/paper1/motivation.tex
@@ -1,3 +1,5 @@
+\label{sec:motivation}
+
 Bug-finding tools have been an active area of research for almost as long as computer programs have existed. 
 Intriguing techniques such as abstract interpretation, fuzzing, and symbolic execution with SAT solving have been proposed and developed.
 But evaluation has been a problem, as  ground truth is in extremely short supply.
