--- a/paper1/biblio.bib
+++ b/paper1/biblio.bib
@@ -2,12 +2,28 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Brendan Dolan-Gavitt at 2015-09-21 19:37:43 -0400 
+%% Created for Brendan Dolan-Gavitt at 2015-09-23 17:35:58 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{Juliet:2012,
+	Author = {{Center for Assured Software}},
+	Date-Added = {2015-09-23 21:24:23 +0000},
+	Date-Modified = {2015-09-23 21:25:55 +0000},
+	Institution = {National Security Agency},
+	Title = {Juliet Test Suite v1.2 User Guide},
+	Year = {2012}}
+
+@techreport{SAMATE:2014,
+	Author = {{TASC, Inc}. and {Ponte Technologies LLC} and {i\_SW LLC}},
+	Date-Added = {2015-09-23 21:15:59 +0000},
+	Date-Modified = {2015-09-23 21:33:11 +0000},
+	Institution = {SAMATE},
+	Title = {{STONESOUP} Phase 3 Test Generation Report},
+	Year = {2014}}
 
 @inproceedings{Rinard:2005,
 	Acmid = {1094866},
